# IVERT

./: .gitignore  .gitlab-ci.yml  LICENSE  OLD_MANIFEST.in  OLD_pyproject.toml  OLD_setup.py  README.md  VERSION  VERSION_CLIENT_MIN  ivert_config.ini  pyproject.toml  setup.py
.github/workflows/: codacy.yml
archive/: README.md
archive/config/: ivert_config_v0.5.3.ini  ivert_personal_creds_TEMPLATE.txt  ivert_s3_credentials_TEMPLATE.ini
archive/src/: clean_ivert_files.py  client.py  client_job_status.py  client_user_setup.py  coastline_mask_OLD.py  convert_vdatum.py  download_all_icesat2_granules.py  icesat2_photon_database_OLD.py  icesat2_query.py  icesat2_tile_database.py  jobs_database.py  quarantine_manager.py  server_file_export.py  server_job_manager.py  server_maintain_manager.py  server_rest_api.py  validation_pool_manager_UNUSED.py
config/: email_templates.ini  email_templates.py  ivert_config.ini  ivert_defaults.ini  ivert_job_config_TEMPLATE.ini  ivert_jobs_schema.sql  ivert_user_config_TEMPLATE.ini
config/archive/: ivert_config_v0.5.3.ini  ivert_jobs_schema.sql
data/: empty_tile.tif
data/config_templates/: ivert_job_config_template.ini
data/icesat2/: ATL03_EMPTY_TILE.h5
docs/: cache.md  configfile.md  database.md  options.md  upgrade.md  validate.md
ivert/: __init__.py  atl_dataset.py  atl_granules.py  client_job_download.py  client_job_status.py  client_job_upload.py  client_subscriptions.py  client_test_job.py  convert_vdatum.py  download_all_icesat2_granules.py  find_bad_icesat2_granules.py  ivert_client.py  jobs_database.py  new_user_setup.py  nsidc_download.py  plot_results_slope_centrality.py  plot_validation_results.py  s3.py  validate_dem_collection.py  validation_pool_manager.py
ivert/utils/: configfile.py  create_empty_tiff.py  query_yes_no.py
src/: TEMP_test_subproc.py  __init__.py  analyze_validation_results.py  atl_dataset.py  atl_granules.py  atl_variable_finder.py  classify_icesat2_photons.py  clean_ivert_files.py  cli.py  client.py  client_job_download.py  client_job_import.py  client_job_status.py  client_job_test.py  client_job_update.py  client_job_upload.py  client_job_validate.py  client_subscriptions.py  client_test_job.py  client_upgrade.py  client_user_setup.py  coastline_mask.py  convert_error_tif_to_vector.py  convert_vdatum.py  download_all_icesat2_granules.py  eliminate_unneeded_files_in_validation_results.py  export_vector.py  filter_results.py  find_bad_icesat2_granules.py  generate_granule_lines.py  icesat2_database_v2.py  icesat2_photon_database.py  icesat2_query.py  icesat2_requests.py  icesat2_tile_database.py  ivert.py  ivert_client.py  ivert_client_job_download.py  ivert_client_job_upload.py  ivert_client_subscriptions.py  (+40 more)
src/archive/: client_job_import.py  coastline_mask_v2.py  sns.py
src/config/: ivert_defaults.ini
src/tests/: rest_api_test.py
src/tests_old/: TEMP_test_size_of_crm_data.py  test_dask_geopandas.py  test_rtree_implementation.py
src/utils/: __init__.py  bcolors.py  configfile.py  create_empty_tiff.py  create_empty_tinytiff.py  cuboid_funcs.py  dem_geom.py  fetch_text.py  is_aws.py  is_conda.py  is_email.py  list_photon_tiles.py  loggerproc.py  parallel_funcs.py  pickle_blosc.py  progress_bar.py  pyproj_funcs.py  query_yes_no.py  sizeof_format.py  split_dem.py  subproc_logger.py  traverse_directory.py  unformat_text.py  version.py  version_check_client.py  version_check_server.py
