[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.ivert_version.__version__"}

[project]
name = "ivert"
py-modules = ["src.ivert_client"]
authors = [{name = "Mike MacFerrin", email = "michael.macferrin@colorado.edu"}]
dynamic = ["version"]
description = "ICESat-2 Validation of Elevations Reporting Tool (IVERT)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["icesat2", "elevation", "validation", "ivert"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "boto3",
    "sqlite3"
]

[project.scripts]
ivert = "src.ivert_client:ivert_client_cli"
#s3 = "srcs3:s3_cli"

[project.entry-points."ivert"]
ivert = "src.ivert_client:ivert_client_cli"
#
#[project.entry-points."s3"]
#s3 = "srcs3:s3_cli"