[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ivert"]
#include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ivert.version.__version__"}

[project]
name = "ivert"
authors = [{name = "Mike MacFerrin", email = "michael.macferrin@colorado.edu"}]
dynamic = ["version"]
description = "ICESat-2 Validation of Elevations Reporting Tool (IVERT)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["icesat2", "elevation", "validation", "ivert"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "boto3"
]

[project.scripts]
ivert = "ivert/ivert_client:ivert_client_cli"
#s3 = "srcs3:s3_cli"

#[project.entry-points."ivert"]
#ivert = "ivert.ivert_client:ivert_client_cli"
#
#[project.entry-points."s3"]
#s3 = "srcs3:s3_cli"