[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivert"
dynamic = ["version"]
description = "The ICESat-2 Validation of Elevations Reporting Tool (IVERT)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael MacFerrin", email = "michael.macferrin@colorado.edu"},
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "dateparser",
    "gdal",
    "geopandas",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numexpr",
    "numpy",
    "packaging",
    "pandas",
    "psutil",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely",
    "six",
    "tabulate",
    "xarray",
    "fetchez",
    "globato",
    "transformez",
]

[project.urls]
Source = "https://github.com/ciresdem/IVERT"

[project.scripts]
ivert = "ivert.cli:ivert_cli"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
packages = ["ivert", "ivert_utils"]

[tool.setuptools.package-dir]
"ivert" = "src"
"ivert_utils" = "src/utils"

[tool.setuptools.package-data]
"ivert" = ["config/*.ini"]
